# rune

./: .gitignore  CMakeLists.txt  Justfile  README.md  devenv.nix
.github/workflows/: tests.yml
src/: rune_compiler.hpp  rune_defs.hpp  rune_os.hpp  rune_os_generic.cpp  rune_os_linux.cpp  rune_os_windows.cpp  rune_paths.hpp
tests/: base.hpp  test_rune_os.cpp  test_rune_paths.cpp
